--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -19,13 +19,6 @@ a {
   text-decoration: none;
 }
 
-:root {
-  --heading-font-size-600: 4rem;
-  --heading-font-size-ios: 2.5rem;
-  --heading-font-size-tablet: 6rem;
-  --heading-font-size-desktop: 6rem;
-}
-
 .dark {
   background-color: rgb(12, 12, 12) !important;
 
@@ -87,14 +80,13 @@ nav {
   z-index: 1;
   position: fixed;
   display: flex;
-  background-color: rgb(12, 12, 12);
+  background-color: rgba(12, 12, 12, 0.971);
   padding: 1rem 0;
   width: 100%;
   margin: 0 auto;
 
   .container {
     max-width: 90%;
-    background-color: rgb(12, 12, 12);
     padding: 1rem 2.3rem;
   }
 
@@ -280,7 +272,8 @@ nav {
           }
 
           img {
-            padding: 0.1rem;
+            width: 50%;
+            padding: 0.5rem;
           }
         }
       }
