--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -238,36 +238,49 @@ nav {
         width: 100%;
 
         .wrapper {
-          margin: 4rem auto;
+          // background-color: rgb(17, 17, 17);
           border: solid 0.1rem white;
-          padding: 1rem;
+          margin: 3rem auto;
+          padding: 1.3rem;
           float: left;
 
           .content {
             float: left;
+            padding: 0.5rem;
             width: 50%;
-            height: 300px;
             h1 {
-              padding: 0.1rem;
+              padding: 0.5rem;
               font-size: 3rem;
               color: rgb(238, 238, 238) !important;
             }
 
             p {
-              padding: 0.1rem;
+              padding: 0.5rem;
+              font-size: 1.2rem;
               color: rgb(204, 204, 204);
             }
 
+            .technologies-container {
+              display: flex;
+              padding: 0.5rem;
+              i {
+                color: white;
+                font-size: 3rem;
+                margin: 0 0.5rem;
+              }
+            }
+
             .btn-container {
-              display: inline-flex;
+              display: flex;
+              justify-content: flex-start;
               a {
                 color: white;
                 border: solid 0.1rem rgb(255, 255, 255);
-                margin: 1.5rem 0.2rem;
-                padding: 0.3rem 0.7rem;
+                margin: 1rem 0.5rem;
+                padding: 0.5rem 1.5rem;
                 font-size: 20px;
                 text-transform: uppercase;
-                letter-spacing: 0.7rem;
+                letter-spacing: 0.2rem;
                 transition: 0.5s;
               }
 
@@ -360,6 +373,20 @@ nav {
 @media screen and (max-width: 200px) {
   body {
     transition: all 0.3s;
+  }
+}
+
+button {
+  border: none;
+  background-color: transparent;
+}
+
+@keyframes introLoad {
+  from {
+    transform: translateY(180px);
+  }
+  to {
+    transform: translateY(0);
   }
 }
 
@@ -551,17 +578,3 @@ nav {
 //     }
 //   }
 // }
-
-button {
-  border: none;
-  background-color: transparent;
-}
-
-@keyframes introLoad {
-  from {
-    transform: translateY(180px);
-  }
-  to {
-    transform: translateY(0);
-  }
-}
